kubernetes/infrastructure/github-runners/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arc-controller-metrics
  namespace: arc-systems
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: gha-rs-controller
    app.kubernetes.io/component: controller-manager
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30885
      protocol: TCP
      name: metrics
